<resources>
    <string name="app_name">SerenityAPP</string>
    <string name="app_name_new">serenity</string>
    <string name="button1_name">saozhu</string>
    <string name="guide_header_text">Walkthrough</string>
    <string name="guide_header_button">Skip</string>
    <string name="guide_welcome_text">Welcome</string>
    <string name="guide_introduction_text">With serenity, it\'s easy to find the right\nmusic for every moment</string>
    <string name="guide_music_title_text">High Quality Music</string>
    <string name="guide_music_text">More than 30 million songs</string>
    <string name="guide_timer_title_text">Intelligent Timer</string>
    <string name="guide_timer_text">With serenity, it\'s easy to arrange \nyour time</string>
    <string name="guide_others_share_title_text">Share Serenity</string>
    <string name="guide_others_share_text">Easily share serenity with your friends</string>
    <string name="guide_others_invite_title_text">Invite Friends</string>
    <string name="guide_others_invite_text">Invite your friends to join serenity</string>
    <string name="get_started_button">Get Started</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="signintext">Sign In</string>
    <string name="musictext">Serenity</string>
    <string name="accounttext">Account</string>
    <string name="passwordtext">Password</string>
    <string name="needregisterbutton">Do not have an account?</string>
    <string name="signuptext">Sign Up</string>
    <string name="account_registration_text">Account Registration</string>
    <string name="home">Home</string>
    <string name="time">"00:00"</string>
    <string name="music">Music</string>
    <string name="timer">Timer</string>
    <string name="sleep">Sleep</string>
    <string name="others">More expectation...</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="guide_sleep_title_text">Sweet Sleep</string>
    <string name="guide_sleep_text">Serenity can help you improve \nthe quality of sleep</string>
    <string name="scan">Scan</string>
    <string name="new_alarm">New alarm</string>
</resources>
