<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_music"
            android:title="@string/music"/>
        <item
            android:id="@+id/menu_timer"
            android:title="@string/timer"/>
        <item
            android:id="@+id/menu_sleep"
            android:title="@string/sleep"/>
        <item
            android:id="@+id/menu_others"
            android:title="@string/others"/>
        <item
            android:id="@+id/menu_settings"
            android:title="@string/settings"/>
        <item
            android:id="@+id/menu_logout"
            android:title="@string/logout"/>
        <item
            android:id="@+id/menu_scan"
            android:title="@string/scan"/>
    </group>
</menu>